<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Judge Companion</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_server">ServerActivity</string>
    <string name="title_screen">Judging Companion</string>
    <string name="create_button">Create New Competition</string>
    <string name="join_button">Join Existing Competition</string>
    <string name="created_by">Developed by SDDS Solutions</string>
    <string name="title_activity_server_page_fragment">ServerPageFragment</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="judges">Judges</string>
    <string name="teams">Teams</string>
    <string name="events">Events</string>
    <string name="title_activity_client_page_fragment">ClientPageFragment</string>
    <string name="title_activity_client">ClientActivity</string>
    <string name="title_activity_team_detail">TeamDetailActivity</string>
    <string name="title_activity_team_detail_dialog_fragment">TeamDetailDialogFragment</string>
    <string name="message_empty_events">Adding New Events\n\nTo add a new Event, press the + in the top right corner.</string>
    <string name="message_empty_judges">Adding New Judges\n\nTo add a new Judge, press the + in the top right corner.</string>
    <string name="message_empty_teams">Adding New Teams\n\nTo add a new Team, press the + in the top right corner.</string>
    <string name="title_activity_new_entry_fragment">NewEntryFragment</string>
    <string name="action_remove_item">Remove this entry.</string>
    <string name="title_activity_add_judge_dialog_fragment">AddJudgeDialogFragment</string>

    <!-- Event Setup -->
    <string name="add_event_name_title">Event Name</string>
    <string name="add_event_description">Event Description</string>
    <string name="add_event_metrics">Event Metrics</string>
    <string name="add_event_points">Points</string>
    <string name="add_event_time">Time</string>

    <!-- Judge Setup -->
    <string name="add_judge_name">Judge Name</string>
    <string name="add_judge_institution">Institution</string>
    <string name="add_judge_email">E-mail</string>
    <string name="add_judge_password">Password</string>

    <!-- Team Setup -->
    <string name="add_team_name">Team Name</string>
    <string name="add_team_members">Team Members</string>
    <string name="add_team_institution">Institution</string>

    <!-- General -->

    <string name="logo_description_general">Logo</string>
    <string name="title_activity_startup">StartupActivity</string>

</resources>