<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="76dp"
        android:layout_height="250dp"
        android:contentDescription="@string/logo_description_general"
        android:scaleType="fitStart"
        android:src="@drawable/ic_add_event" />

    <!-- <LinearLayout -->
    <!-- android:layout_width="match_parent" -->
    <!-- android:layout_height="match_parent" -->
    <!-- android:orientation="vertical" > -->

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/add_event_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_event_name_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/add_event_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textCapWords" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/add_event_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_event_description"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/add_event_description_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textCapWords" >
            </EditText>

            <TextView
                android:id="@+id/add_event_metrics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_event_metrics"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <CheckBox
                android:id="@+id/add_event_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_event_points" />

            <CheckBox
                android:id="@+id/add_event_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_event_time" />

            <!-- <TextView -->
            <!-- android:id="@+id/add_event_tiebreaker" -->
            <!-- android:layout_width="wrap_content" -->
            <!-- android:layout_height="wrap_content" -->
            <!-- android:text="Tie Breaker" -->
            <!-- android:textAppearance="?android:attr/textAppearanceMedium" /> -->


            <!-- <RadioGroup -->
            <!-- android:id="@+id/add_event_tiebreaker_radio" -->
            <!-- android:layout_width="wrap_content" -->
            <!-- android:layout_height="wrap_content" > -->


            <!-- <RadioButton -->
            <!-- android:id="@+id/add_event_tiebreaker_points" -->
            <!-- android:layout_width="wrap_content" -->
            <!-- android:layout_height="wrap_content" -->
            <!-- android:checked="true" -->
            <!-- android:text="Points" /> -->


            <!-- <RadioButton -->
            <!-- android:id="@+id/add_event_tiebreaker_time" -->
            <!-- android:layout_width="wrap_content" -->
            <!-- android:layout_height="wrap_content" -->
            <!-- android:text="Time" /> -->
            <!-- </RadioGroup> -->
        </LinearLayout>
    </ScrollView>
    <!-- </LinearLayout> -->

</LinearLayout>