<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="76dp"
        android:layout_height="144dp"
        android:contentDescription="@string/logo_description_general"
        android:scaleType="fitStart"
        android:src="@drawable/ic_add_judge" />

    <!-- <LinearLayout -->
    <!-- android:layout_width="fill_parent" -->
    <!-- android:layout_height="fill_parent" -->
    <!-- android:orientation="vertical" > -->

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/add_judge_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_judge_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/add_judge_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/add_judge_institution"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_judge_institution"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/add_judge_institution_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textCapWords" />

            <TextView
                android:id="@+id/add_judge_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_judge_email"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/add_judge_email_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/add_judge_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_judge_password"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/add_judge_password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textVisiblePassword" />
        </LinearLayout>
    </ScrollView>
    <!-- </LinearLayout> -->

</LinearLayout>